feat: ranker loss function and text encoding

--- a/notebooks/A2_Colab_Demo.ipynb
+++ b/notebooks/A2_Colab_Demo.ipynb
@@ -259,7 +259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -375,7 +375,7 @@
       "source": [
         "# Demo inference: score and rank recipes for a sample user\n",
         "def recommend_for_user(user_id: str, candidate_df: pd.DataFrame, top_n: int = 5):\n",
-        "    # In a full system, we'd build personalized features; here we score with trained model\n",
+        "    # In a full system, I'd build personalized features; here I score with trained model\n",
         "    X = candidate_df[feature_cols]\n",
         "    scores = model.predict(X)\n",
         "    out = candidate_df[[\"recipe_id\"]].copy()\n",
