chore: cleanup notebooks

--- a/notebooks/A2_Production_Inference.ipynb
+++ b/notebooks/A2_Production_Inference.ipynb
@@ -54,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -101,39 +101,40 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "2025-09-20 16:28:54,858 - recipe_recommender.utils.fetch_user_interactions - INFO - 🔍 Initialized UserInteractionFetcher\n",
-            "2025-09-20 16:28:54,858 - recipe_recommender.utils.fetch_user_interactions - INFO -    Events file: /Users/marcelqayoomtaylor/Documents/GitHub/PantryPalML/recipe_recommender/output/combined_events.csv\n",
-            "2025-09-20 16:28:54,859 - recipe_recommender.utils.fetch_user_interactions - INFO -    Tracking 8 event types\n",
-            "2025-09-20 16:28:54,946 - recipe_recommender.utils.fetch_user_interactions - INFO - 🎯 Fetching interactions for user: $device:E0E4C8E4-CC47-45B3-B283-3C46D8636904\n",
-            "2025-09-20 16:28:54,947 - recipe_recommender.utils.fetch_user_interactions - INFO - 📖 Reading events file in chunks...\n",
-            "2025-09-20 16:28:55,048 - recipe_recommender.utils.fetch_user_interactions - INFO -    Processed 50,000 rows, found 381 matches...\n"
+            "2025-09-26 12:33:20,431 - recipe_recommender.utils.fetch_user_interactions - INFO - Initialized UserInteractionFetcher\n",
+            "2025-09-26 12:33:20,434 - recipe_recommender.utils.fetch_user_interactions - INFO -    Events file: /Users/marcelqayoomtaylor/Documents/GitHub/PantryPalML/recipe_recommender/output/combined_events.csv\n",
+            "2025-09-26 12:33:20,435 - recipe_recommender.utils.fetch_user_interactions - INFO -    Tracking 8 event types\n",
+            "2025-09-26 12:33:20,436 - recipe_recommender.utils.fetch_user_interactions - INFO - Fetching interactions for user: afcacbe1-eaba-415f-b03e-14ed682af65e\n",
+            "2025-09-26 12:33:20,438 - recipe_recommender.utils.fetch_user_interactions - INFO - Reading events file in chunks\n",
+            "2025-09-26 12:33:20,633 - recipe_recommender.utils.fetch_user_interactions - INFO -    Processed 50,000 rows, found 0 matches...\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Using user: $device:E0E4C8E4-CC47-45B3-B283-3C46D8636904\n"
+            "Using user: afcacbe1-eaba-415f-b03e-14ed682af65e\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "2025-09-20 16:28:55,084 - recipe_recommender.utils.fetch_user_interactions - INFO - ✅ Found 381 recipe interactions for user $device:E0E4C8E4-CC47-45B3-B283-3C46D8636904\n",
-            "2025-09-20 16:28:55,084 - recipe_recommender.utils.fetch_user_interactions - INFO -    Processed 63,662 total events\n",
-            "2025-09-20 16:28:55,084 - recipe_recommender.utils.fetch_user_interactions - INFO -    Time range: 2024-05-25 to 2024-10-01\n",
-            "2025-09-20 16:28:55,085 - recipe_recommender.utils.fetch_user_interactions - INFO -    Event breakdown: {'Recipe Favourited': 10, 'Recipe Viewed': 349, 'Recipe Link Clicked': 22}\n",
-            "2025-09-20 16:28:55,085 - recipe_recommender.inference.production_recipe_scorer - INFO - 🎯 Initializing Production Recipe Scorer...\n",
-            "2025-09-20 16:28:55,086 - recipe_recommender.inference.production_recipe_scorer - INFO - 🔧 Loading trained model components...\n",
-            "2025-09-20 16:28:55,092 - recipe_recommender.inference.production_recipe_scorer - INFO - ✅ Loaded LIGHTGBM model\n",
-            "2025-09-20 16:28:55,093 - recipe_recommender.inference.production_recipe_scorer - INFO - ✅ Loaded model metadata with 22 features\n",
-            "2025-09-20 16:28:55,106 - recipe_recommender.inference.production_recipe_scorer - INFO - ✅ Loaded 1967 recipes for scoring\n",
-            "2025-09-20 16:28:55,106 - recipe_recommender.inference.production_recipe_scorer - INFO - 🎯 Scoring 1967 recipes for user...\n",
-            "2025-09-20 16:28:55,186 - recipe_recommender.inference.production_recipe_scorer - INFO - ✅ Generated scores for 1967 recipes\n",
-            "2025-09-20 16:28:55,187 - recipe_recommender.inference.production_recipe_scorer - INFO -    Score range: 0.0023 - 0.1304\n",
-            "2025-09-20 16:28:55,187 - recipe_recommender.inference.production_recipe_scorer - INFO -    Above threshold (0.0): 1967 recipes\n",
-            "2025-09-20 16:28:55,188 - recipe_recommender.inference.production_recipe_scorer - INFO -    Returning top 10 recommendations\n"
+            "2025-09-26 12:33:20,681 - recipe_recommender.utils.fetch_user_interactions - INFO - Found 74 recipe interactions for user afcacbe1-eaba-415f-b03e-14ed682af65e\n",
+            "2025-09-26 12:33:20,682 - recipe_recommender.utils.fetch_user_interactions - INFO -    Processed 63,662 total events\n",
+            "2025-09-26 12:33:20,686 - recipe_recommender.utils.fetch_user_interactions - INFO -    Time range: 2025-06-03 to 2025-08-24\n",
+            "2025-09-26 12:33:20,688 - recipe_recommender.utils.fetch_user_interactions - INFO -    Event breakdown: {'Recipe Added To Collections': 10, 'Recipe Removed From Collections': 2, 'Recipe Link Clicked': 31, 'Recipe Cook Started': 9, 'Recipe Cooked': 8, 'Recipe Search Queried': 14}\n",
+            "2025-09-26 12:33:20,696 - recipe_recommender.inference.production_recipe_scorer - INFO - Initializing Production Recipe Scorer\n",
+            "2025-09-26 12:33:20,720 - recipe_recommender.inference.production_recipe_scorer - INFO - Loading trained model components...\n",
+            "2025-09-26 12:33:20,743 - recipe_recommender.inference.production_recipe_scorer - INFO - Loaded LIGHTGBM model\n",
+            "2025-09-26 12:33:20,773 - recipe_recommender.inference.production_recipe_scorer - INFO - Loaded model metadata with 21 features\n",
+            "2025-09-26 12:33:20,847 - recipe_recommender.inference.production_recipe_scorer - INFO - Loaded raw recipe features from enhanced_recipe_features_from_db.csv\n",
+            "2025-09-26 12:33:20,850 - recipe_recommender.inference.production_recipe_scorer - INFO - Loaded 1967 recipes for scoring\n",
+            "2025-09-26 12:33:20,914 - recipe_recommender.inference.production_recipe_scorer - INFO - Scoring 1967 recipes for user\n",
+            "2025-09-26 12:33:21,030 - recipe_recommender.inference.production_recipe_scorer - INFO - Generated scores for 1967 recipes\n",
+            "2025-09-26 12:33:21,036 - recipe_recommender.inference.production_recipe_scorer - INFO -    Score range: -1.9474 - 0.1856\n",
+            "2025-09-26 12:33:21,041 - recipe_recommender.inference.production_recipe_scorer - INFO -    No threshold; selecting by top-N\n",
+            "2025-09-26 12:33:21,044 - recipe_recommender.inference.production_recipe_scorer - INFO -    Returning top 10 recommendations\n"
           ]
         },
         {
@@ -160,124 +161,89 @@
               "      <th>recipe_id</th>\n",
               "      <th>recipe_name</th>\n",
               "      <th>score</th>\n",
-              "      <th>servings</th>\n",
-              "      <th>total_time</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>1081</td>\n",
-              "      <td>Thai Coconut Chicken</td>\n",
-              "      <td>0.130396</td>\n",
-              "      <td>5</td>\n",
-              "      <td>25</td>\n",
+              "      <td>232</td>\n",
+              "      <td>Chicken with Creamy Marsala Sauce</td>\n",
+              "      <td>0.185556</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>255</td>\n",
-              "      <td>Chinese Lettuce Wraps (San Choy Bow )</td>\n",
-              "      <td>0.123584</td>\n",
-              "      <td>3</td>\n",
-              "      <td>20</td>\n",
+              "      <td>1082</td>\n",
+              "      <td>Thai Drunken Noodles (Pad Kee Mao)</td>\n",
+              "      <td>0.185556</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>259</td>\n",
-              "      <td>Chinese Satay Chicken Stir Fry</td>\n",
-              "      <td>0.123584</td>\n",
-              "      <td>2</td>\n",
-              "      <td>20</td>\n",
+              "      <td>1090</td>\n",
+              "      <td>Thai Prawn, Mango and Avocado Noodle Salad</td>\n",
+              "      <td>0.185556</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>488</td>\n",
-              "      <td>Glass noodle salad with lime cashew crumble</td>\n",
-              "      <td>0.123584</td>\n",
-              "      <td>3</td>\n",
-              "      <td>20</td>\n",
+              "      <td>1773</td>\n",
+              "      <td>Naan Pizza</td>\n",
+              "      <td>0.178623</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>938</td>\n",
-              "      <td>Satay Chicken Noodle Salad</td>\n",
-              "      <td>0.123584</td>\n",
-              "      <td>3</td>\n",
-              "      <td>20</td>\n",
+              "      <td>278</td>\n",
+              "      <td>Chop Suey (Chicken Stir Fry)</td>\n",
+              "      <td>0.153619</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
-              "      <td>160</td>\n",
-              "      <td>Celebration Salmon Salad</td>\n",
-              "      <td>0.117588</td>\n",
-              "      <td>5</td>\n",
-              "      <td>35</td>\n",
+              "      <td>1077</td>\n",
+              "      <td>Thai Chicken Peanut Noodles</td>\n",
+              "      <td>0.153619</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>6</th>\n",
-              "      <td>1036</td>\n",
-              "      <td>Sticky Chicken With Vegetable Fried Rice</td>\n",
-              "      <td>0.115913</td>\n",
-              "      <td>2</td>\n",
               "      <td>20</td>\n",
+              "      <td>Asian Salmon Salad</td>\n",
+              "      <td>0.124245</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>7</th>\n",
-              "      <td>1043</td>\n",
-              "      <td>Stir Fried Peanut Sauce Noodles</td>\n",
-              "      <td>0.112112</td>\n",
-              "      <td>2</td>\n",
-              "      <td>23</td>\n",
+              "      <td>665</td>\n",
+              "      <td>Mapo Tofu</td>\n",
+              "      <td>0.123119</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>8</th>\n",
-              "      <td>206</td>\n",
-              "      <td>Chicken Nachos</td>\n",
-              "      <td>0.109643</td>\n",
-              "      <td>4</td>\n",
-              "      <td>25</td>\n",
+              "      <td>219</td>\n",
+              "      <td>Chicken Stir Fry with Rice Noodles</td>\n",
+              "      <td>0.099241</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9</th>\n",
-              "      <td>1133</td>\n",
-              "      <td>Vegetarian lettuce wraps</td>\n",
-              "      <td>0.109643</td>\n",
-              "      <td>2</td>\n",
-              "      <td>25</td>\n",
+              "      <td>247</td>\n",
+              "      <td>Chinese Chicken Salad with Asian Peanut Salad ...</td>\n",
+              "      <td>0.099241</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "  recipe_id                                  recipe_name     score  servings  \\\n",
-              "0      1081                         Thai Coconut Chicken  0.130396         5   \n",
-              "1       255        Chinese Lettuce Wraps (San Choy Bow )  0.123584         3   \n",
-              "2       259               Chinese Satay Chicken Stir Fry  0.123584         2   \n",
-              "3       488  Glass noodle salad with lime cashew crumble  0.123584         3   \n",
-              "4       938                   Satay Chicken Noodle Salad  0.123584         3   \n",
-              "5       160                     Celebration Salmon Salad  0.117588         5   \n",
-              "6      1036     Sticky Chicken With Vegetable Fried Rice  0.115913         2   \n",
-              "7      1043              Stir Fried Peanut Sauce Noodles  0.112112         2   \n",
-              "8       206                               Chicken Nachos  0.109643         4   \n",
-              "9      1133                     Vegetarian lettuce wraps  0.109643         2   \n",
-              "\n",
-              "   total_time  \n",
-              "0          25  \n",
-              "1          20  \n",
-              "2          20  \n",
-              "3          20  \n",
-              "4          20  \n",
-              "5          35  \n",
-              "6          20  \n",
-              "7          23  \n",
-              "8          25  \n",
-              "9          25  "
+              "  recipe_id                                        recipe_name     score\n",
+              "0       232                  Chicken with Creamy Marsala Sauce  0.185556\n",
+              "1      1082                 Thai Drunken Noodles (Pad Kee Mao)  0.185556\n",
+              "2      1090         Thai Prawn, Mango and Avocado Noodle Salad  0.185556\n",
+              "3      1773                                         Naan Pizza  0.178623\n",
+              "4       278                       Chop Suey (Chicken Stir Fry)  0.153619\n",
+              "5      1077                        Thai Chicken Peanut Noodles  0.153619\n",
+              "6        20                                 Asian Salmon Salad  0.124245\n",
+              "7       665                                          Mapo Tofu  0.123119\n",
+              "8       219                 Chicken Stir Fry with Rice Noodles  0.099241\n",
+              "9       247  Chinese Chicken Salad with Asian Peanut Salad ...  0.099241"
             ]
           },
-          "execution_count": 3,
           "metadata": {},
-          "output_type": "execute_result"
+          "output_type": "display_data"
         }
       ],
       "source": [
@@ -285,22 +251,22 @@
         "fetcher = UserInteractionFetcher(config)\n",
         "\n",
         "# Example: pick a user with interactions (you can replace with a known user_id)\n",
-        "sample_user_id = None\n",
+        "sample_user_id = 'afcacbe1-eaba-415f-b03e-14ed682af65e'\n",
         "\n",
-        "# Quickly sample a user from events file\n",
-        "import pandas as pd\n",
-        "try:\n",
-        "    events_path = config.output_dir / \"combined_events.csv\"\n",
-        "    if events_path.exists():\n",
-        "        df_head = pd.read_csv(events_path, nrows=50000)\n",
-        "        # value_counts over recipe-related events finds an active user candidate\n",
-        "        candidates = (\n",
-        "            df_head[df_head[\"event\"].isin(fetcher.recipe_events)][\"distinct_id\"].value_counts()\n",
-        "        )\n",
-        "        if len(candidates) > 0:\n",
-        "            sample_user_id = candidates.index[0]\n",
-        "except Exception as e:\n",
-        "    print(\"Warning reading events head:\", e)\n",
+        "# # Quickly sample a user from events file\n",
+        "# import pandas as pd\n",
+        "# try:\n",
+        "#     events_path = config.output_dir / \"combined_events.csv\"\n",
+        "#     if events_path.exists():\n",
+        "#         df_head = pd.read_csv(events_path)\n",
+        "#         # value_counts over recipe-related events finds an active user candidate\n",
+        "#         candidates = (\n",
+        "#             df_head[df_head[\"event\"].isin(fetcher.recipe_events)][\"distinct_id\"].value_counts()\n",
+        "#         )\n",
+        "#         if len(candidates) > 0:\n",
+        "#             sample_user_id = candidates.index[0]\n",
+        "# except Exception as e:\n",
+        "#     print(\"Warning reading events head:\", e)\n",
         "\n",
         "if sample_user_id is None:\n",
         "    sample_user_id = \"demo_user_123\"  # fallback for demo\n",
@@ -314,15 +280,18 @@
         "# Returns ranked recommendations with scores and metadata\n",
         "result = scorer.get_user_recipe_recommendations(sample_user_id, interactions, n_recommendations=10)\n",
         "\n",
-        "# Display top results\n",
+        "# Display top results (robust to empty results)\n",
         "import pandas as pd\n",
-        "recs_df = pd.DataFrame(result[\"recommendations\"])[:10]\n",
-        "recs_df[[\"recipe_id\", \"recipe_name\", \"score\"]]\n"
+        "recs_df = pd.DataFrame(result.get(\"recommendations\", []))[:10]\n",
+        "if recs_df.empty:\n",
+        "    print(\"No recommendations returned.\")\n",
+        "else:\n",
+        "    display(recs_df[[\"recipe_id\", \"recipe_name\", \"score\"]])\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -330,7 +299,7 @@
           "output_type": "stream",
           "text": [
             "SMOKE TEST: PASS\n",
-            "Top recommendation: Thai Coconut Chicken (score=0.1304)\n"
+            "Top recommendation: Chicken with Creamy Marsala Sauce (score=0.1856)\n"
           ]
         }
       ],
@@ -339,7 +308,6 @@
         "errors = []\n",
         "\n",
         "# 1) Model artifacts exist\n",
-        "from pathlib import Path\n",
         "model_file = config.model_dir / \"hybrid_lightgbm_model.txt\"\n",
         "meta_file = config.model_dir / \"hybrid_lightgbm_metadata.json\"\n",
         "if not model_file.exists():\n",
